--- a/src/components/Layouts/DefaultLayout/Header/style.module.scss
+++ b/src/components/Layouts/DefaultLayout/Header/style.module.scss
@@ -1,33 +1,26 @@
-@import '../../../../assets/styles/base/variable.scss';
 
-// @keyframes slideIn{
-//     from{
-//         transform: translateX(-100%);
-//     }to{
-//         transform: translateX(0);
-//     }
-// }
-// @keyframes slideOut{
-//     from{
-//         transform: translateX(0);
-//     }to{
-//         transform: translateX(-100%);
-//     }
-// }
+
+
 .mainHeader{
-    background-color: $primary-color;
-    height: $height-header;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    right: 0;
+    position: fixed;
+    background-color: var(--primary-color);
+    height: 80px;
+    height: var(--height-header);
 }
 .containerMainHeader{
     display: flex;
     align-items: center;
-    height: $height-header;
+    height: var(--height-header);
     // justify-content: space-between;
 }
-.logoHeader{
-    margin-right: 100px
-}
+
 .searchAndCate{
+    // padding: var(--bien);
+    margin-left: 100px;
     display: flex;
     align-items: center;
     flex: 1;
@@ -40,6 +33,7 @@
     padding: 6px 6px ;
     border-radius: 30px;
     margin: 0 10px;
+    position: relative;
 }
 .searchInput{
     flex-grow: 1;
@@ -51,12 +45,19 @@
     padding: 0 10px;
     border-radius: 30px;
 }
+
 .btnSearch{
     padding: 7px 10px;
     border: none;
     background-color: #fee2e2;
     border-radius: 50%;
     cursor: pointer;
+}
+.btnCateContainer{
+    position: relative;
+}
+#tippy-6{
+    left: 0;
 }
 .btnCateMobile,
 .btnCate{
@@ -67,7 +68,6 @@
     cursor: pointer;
     color: #fff;
     font-size: 1.7rem;
-    position: relative;
 
     &::after {
         content: '';
@@ -79,6 +79,7 @@
         background-color: transparent;
     }
 }
+
 .btnCateMobile{
     display: none;
 }
@@ -90,7 +91,6 @@
 
 .btnCart{
     margin-left: 20px;
-    margin-right: 10px;
     display: block;
     padding: 16px 20px;
     background-color: #000;
@@ -111,11 +111,13 @@
   .cateOverPlay{
     position: fixed;
     top: 100px;
+    // top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.3);
     cursor: default;
+    z-index: 99;
 }
 .btnCateText{
     margin-left: 6px;
@@ -124,6 +126,7 @@
     margin-left: 6px;
 }
 .navCateMobileOverPlay{
+    z-index: 1;
     position: fixed;
     top: 0;
     left: 0;
@@ -135,6 +138,7 @@
     
 }
 .navMobileInput:checked ~ .navCateMobileOverPlay{
+    
     transform: translateX(0%);
 }
 .navCateMobile{
@@ -145,7 +149,7 @@
 
 .navCateHeaderMobile{
     height: 58px;
-    background-color: $primary-color;
+    background-color: var(--primary-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -167,23 +171,7 @@
     line-height: 2rem;
     margin-bottom: 16px;
 }
-.btnSignUpMobile{
-    padding: 10px;    
-    color: $primary-color;
-    border: solid 1px $primary-color;
-    border-radius: 6px;
-    background-color: #fff;
-    margin-right: 10px;
-    
-}
 
-.btnSignInMobile{
-    padding: 10px 16px;
-    background-color: $primary-color;
-    color: #fff;
-    border-radius: 6px;
-    border: transparent;
-}
 
 .navCateHeaderMobileTop{
     display: flex;
@@ -193,9 +181,8 @@
     margin-top: 4px;
     
 }
-// .navItemCateMobileWrap:not(:first-child){
-//     margin: 3px 0;
-// }
+
+
 .navItemCateMobile{
     list-style-type: none;
     background-color: #fff;
@@ -209,25 +196,49 @@
     color: #000;
     width: 100%;
 }
+
+
+
+.show{
+    display: block;
+}
 // ------------------Reponsive-----------------
+@media (max-width: 1239px) and (min-width: 740px){
+    .tippyWrapResultSearch{
+        width: 500px;
+        
+    }
+}
+
 
 // Tablet : width >=  740px and width < 1024px
 @media (min-width: 740px) and (max-width: 1023px){
-    .logoHeader{
-        margin-right: 10px;
+    .searchAndCate{
+        margin-left: 10px;
     }
+    
     
     
 }
 
 // Moblie: width: < 740px
 @media(max-width: 739px){
-    
+    .btnCart{
+        margin-right: 6px;
+    }
+    .searchAndCate{
+        margin-left: 0;
+    }
     .logoHeader{
         display: none;
     }
     .btnCartText{
         display: none;
+    }
+    .tippyWrapResultSearch{
+        width: 98vw;
+        // left: -70px;
+       
     }
 
 }
