--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 
+
+:root{
+  --primary-color : #ce2929;
+  --height-header: 100px;
+}
 body{
   font-size: 1.4rem;
 }
@@ -10,6 +15,9 @@ html{
   line-height: 1.6rem;
   box-sizing: border-box;
   
+}
+*{
+  box-sizing: border-box;
 }
 
 
