--- a/src/pages/HomePage/homePage.module.scss
+++ b/src/pages/HomePage/homePage.module.scss
@@ -1,7 +1,9 @@
 
 // ------- style for slider  -------------
-.slider{
+.sliderSection{
     padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #f8f9fd;
 }
 
 .sliderAuto{
@@ -57,4 +59,97 @@
     display: flex;
     flex-direction: column;
     
+}
+.containerBtnTrademark{
+    margin-top: 10px;
+}
+.btnTrademark{
+    height: 50px;
+    border-radius: 10px;
+    line-height: 50px;
+    text-align: center;
+    color: #000000;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px 1px #efeeee;
+    width: 100%;
+}
+// ----- style for Products List ---------
+.productSection{
+    background-color: #fcf3e8;
+    padding: 30px 0;
+    // position: relative;
+}
+
+.productContainer{
+    background-color: #fff;
+    border-radius: 10px;
+    // margin-top: 50px;
+}
+
+.productItem{
+    height: 300px;
+    margin-top: 24px;
+    padding: 0 8px;
+    background-color: #fff;
+    border-radius: 16px;
+    &:hover{
+        box-shadow: 0 0 13px 0 #e6e5e5;
+    }
+    .productImg{
+        text-align: center;
+        padding: 10px 0;
+    }
+    .oldPrice{
+        margin-top: 10px;
+        color: #6b7280;
+        font-size: 1.3rem;
+        text-decoration-line: line-through;
+        display: block;
+    }
+    .currentPrice{
+        color: #000000;
+        display: block;
+        font-size: 1.6rem;
+    }
+    .nameProduct{
+        display: block;
+        margin-top: 10px;
+        font-size: 1.6rem;
+        color: var(--primary-color);
+    }
+}
+
+
+.hook{
+    position: relative;
+    height: 100px;
+    span{
+        color: #fff;
+        font-size: 2rem;
+        position: absolute;
+        top: -30px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    img{
+        width: 320px;
+        position: absolute;
+        top: -40px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+
+
+// ---------- Reponsive ----------
+@media (max-width: 739px){
+    .hook {
+        img{
+            width: 250px;
+        }
+        span{
+            font-size: 1.6rem;
+        }
+    }
 }
